[gd_scene load_steps=5 format=3 uid="uid://jksbpfu0c4va"]

[ext_resource type="Script" uid="uid://b0q067uo62hs" path="res://pause_screen.gd" id="1_rk3l4"]
[ext_resource type="Theme" uid="uid://dtd7d0qqqnr0g" path="res://main_m_buttons.tres" id="2_un6tb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rk3l4"]
content_margin_left = 25.0
content_margin_top = 25.0
content_margin_right = 25.0
content_margin_bottom = 25.0
bg_color = Color(0.176471, 0.176471, 0.176471, 0.52549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_un6tb"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0319715, 0.059479, 0.114969, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[node name="pause_screen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rk3l4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.227451, 0.227451, 0.415686)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1112.0
offset_bottom = -608.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.346
anchor_top = 0.213
anchor_right = 0.741
anchor_bottom = 0.747
offset_left = 0.40799
offset_top = -0.0240021
offset_right = 0.36792
offset_bottom = -0.0560303
theme_override_styles/panel = SubResource("StyleBoxFlat_rk3l4")

[node name="buttons" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer2/buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("2_un6tb")
text = "Continue
"

[node name="credits" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("2_un6tb")
text = "Credits"

[node name="exit" type="Button" parent="PanelContainer2/buttons"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme = ExtResource("2_un6tb")
text = "Exit"

[node name="credits" type="PanelContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.023
anchor_top = 0.185
anchor_right = 0.259
anchor_bottom = 0.688
offset_left = -0.160004
offset_top = -71.8
offset_right = -0.279999
offset_bottom = 106.96
theme_override_styles/panel = SubResource("StyleBoxFlat_un6tb")

[node name="RichTextLabel" type="RichTextLabel" parent="credits"]
layout_mode = 2
theme_override_font_sizes/mono_font_size = 32
theme_override_font_sizes/normal_font_size = 32
text = "Artist: 
Emily Conway

Music and Sound: 
Louise Barret

Programmers: 
Aeofi
Kjartan Klein
						
Writer: 
Conway Sutton"

[connection signal="pressed" from="PanelContainer2/buttons/Continue" to="." method="_on_play_pressed"]
[connection signal="pressed" from="PanelContainer2/buttons/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer2/buttons/exit" to="." method="_on_exit_pressed"]
